# ArKeep

./: .env.example  .gitignore  BUG_REPORT.md  DEPLOY_SECRETS_AND_VARIABLES.md  README.md  TAG_VALIDATION_PLAN.md  docker-compose.prod.db.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pom.xml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_stamp_existing_schema.py  0002_add_categories_table.py  0003_add_category_name_constraints.py  0004_migrate_category_to_fk.py  0005_allow_english_in_category_name.py  0006_add_article_tags_array.py  0007_add_user_email.py  0008_fix_tag_column_length.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  article.py  category.py  refresh_token.py  user.py
backend/app/routers/: articles.py  auth.py  categories.py  metadata.py  profile.py
backend/app/schemas/: article.py  auth.py  category.py  metadata.py
backend/app/services/: article_service.py  auth_service.py  category_service.py  metadata_service.py  og_extractor.py
backend/docs/: ERD.md  erdcloud-import.sql
backend/src/main/java/com/archive/backend/: BackendApplication.java
backend/src/main/java/com/archive/backend/auth/: GoogleTokenVerifier.java  GoogleTokenVerifierImpl.java  GoogleUserProfile.java
backend/src/main/resources/: application.yml
backend/src/test/java/com/archive/backend/: ArticleApiIntegrationTest.java  AuthApiIntegrationTest.java
backend/src/test/resources/: application-test.yml
(+115 files in other folders)
